# c50py

./: .gitignore  CONTRIBUTING.md  README.md  USAGE_GUIDE.md  paper.bib  paper.md  pyproject.toml  repro_recursion.py
c50py-0.2.1/: pyproject.toml
examples/: c50py_comprehensive_tutorial.ipynb  c50py_tour.ipynb  c5py_tour.ipynb  create_tutorial.py  diabetes_quickstart.py  diabetes_tree.dot  test.py  titanic_quickstart.py  titanic_tree_clean.dot
src/c50py/: __init__.py  regressor.py  tree.py
src/c5py/: __init__.py
tests/: test_classifier_extended.py  test_features.py  test_import.py  test_regressor_extended.py  test_smoke_fit.py
