[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c5py"
version = "0.2.0"
description = "C5.0-like Decision Trees in Python (scikit-learn style)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "David Díaz", email = "daviddiazsolis@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.2"
]

[project.optional-dependencies]
graphviz = ["graphviz>=0.20"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/daviddiazsolis/c5py"
Issues = "https://github.com/daviddiazsolis/c5py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
